# Tran-Anh-Work

./: .gitignore  Cplusplussyntax.txt  Gemfile  Helpful links  README.md  _config.yml  activity_main.xml  esport.html  gallery.html  news.html
HPCG Benchmark/: AppDelegate.m  CheckProblem.cpp  ComputeProlongation_ref.cpp  ComputeResidual.cpp  ComputeRestriction_ref.cpp  ComputeSYMGS_ref.cpp  ComputeWAXPBY_ref.cpp  GenerateCoarseProblem.cpp  GenerateProblem.cpp  GenerateProblem_ref.cpp  Main.storyboard  ReportResults.cpp  ReportResults.hpp  SetupHalo_ref.cpp  SparseMatrix.hpp  TestSymmetry.cpp  ViewController.h  ViewController.mm  init.cpp  main.hpp  native-main.cpp  struct.hpp
HPCG Benchmark/Base.lproj/: Main.storyboard
HPCG Benchmark/HPCG Benchmark/: AppDelegate.h  CG.cpp  CGData.hpp  CG_ref.cpp  CheckProblem.cpp  ComputeDotProduct_ref.cpp  ComputeMG.cpp  ComputeMG_ref.cpp  ComputeProlongation_ref.cpp  ComputeResidual.cpp  ComputeRestriction_ref.cpp  ComputeSPMV_ref.cpp  ComputeSYMGS.cpp  ComputeSYMGS_ref.cpp  ComputeWAXPBY.cpp  ComputeWAXPBY_ref.cpp  GenerateCoarseProblem.cpp  GenerateGeometry.cpp  GenerateProblem.cpp  GenerateProblem_ref.cpp  Geometry.hpp  MGData.hpp  OptimizeProblem.cpp  ReportResults.cpp  SetupHalo.cpp  SetupHalo_ref.cpp  SparseMatrix.hpp  TestCG.cpp  TestSymmetry.cpp  Vector.hpp  ViewController.mm  hpcg.hpp  init.cpp  main.hpp  main.m  mytimer.cpp  native-main.cpp
HPCGBenchMark/app/: build.gradle
_includes/: event-list.html  nav.html
_layouts/: default.html  default.html.txt  default.txt  esport.html  news.html
_posts/: 2017-06-20-Anh-use-css.md  2017-06-22-Anh-make-web.md
_posts/Anh Intro/: 2017-06-20-Anh-use-css.md  2017-06-22-Anh-make-web.md
_site/: esport.html  gallery.html  index.html  news.html  news.txt
cpp/: CMakeLists.txt  CheckAspectRatio.cpp  CheckProblem.cpp  ComputeDotProduct_ref.cpp  ComputeResidual.cpp  ComputeSPMV_ref.cpp  GenerateProblem.cpp  GenerateProblem_ref.cpp  ReportResults.cpp  ReportResults.hpp  SetupHalo.cpp  SetupHalo_ref.cpp  init.cpp  native-main.cpp
css/: Common.css
download/: Resume.docx
esportevent/: index.html
staffs/: index.html
(+42 files in other folders)
